feat:auth doc
